# PyBigBuy

./: .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  README.md  ci.sh  conftest.py  endpoints_coverage.sh  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml  endpoints_coverage.yml  publish.yml
bigbuy/: __init__.py  advisory.py  api.py  compat.py  endpoints.py  exceptions.py  helpers.py  rate_limit.py  types.py  version.py
tests/: test.py  test_api.py  test_exceptions.py  test_rate_limit.py
