[tool.poetry]
name = "pybigbuy"
version = "3.8.5"
description = ""
authors = []
license = "MIT"
# https://github.com/python-poetry/poetry/issues/705#issuecomment-444742697
packages = [
    {include = "bigbuy"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
types-requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
