[tool.poetry]
name = "pybigbuy"
version = "3.11.0"
description = "BigBuy API client in Python"
authors = ["Bixoto <info@bixoto.com>"]
license = "MIT"
include = ["bigbuy/py.typed"]
readme = "README.md"
# https://github.com/python-poetry/poetry/issues/705#issuecomment-444742697
packages = [
    {include = "bigbuy"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
api-session = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
types-requests = "^2.25.0"
pytest = "^7.1.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
