[tool.poetry]
name = "pybigbuy"
version = "3.19.4"
description = "BigBuy API client in Python"
authors = ["Bixoto <tech@bixoto.com>"]
license = "MIT"
include = ["bigbuy/py.typed"]
readme = "README.md"
# https://github.com/python-poetry/poetry/issues/705#issuecomment-444742697
packages = [
    {include = "bigbuy"}
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
api-session = "^1.3.2"

[tool.poetry.dev-dependencies]
mypy = "^1"
types-requests = "^2.25.0"
pytest = "^7.1.0"
pytest-coverage = "^0.0"
responses = "^0.21.0"

[tool.coverage.report]
omit = ["tests/*", "conftest.py"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
